Change array to sentence to join

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,7 +54,7 @@
   {% endif %}
 
   {% if page.tags.size > 0 %}
-    {% assign keywords = page.tags | array_to_sentence_string: '' %}
+    {% assign keywords = page.tags | join: ', ' %}
   {% else %}
     {% assign keywords = site_keywords %}
   {% endif %}
