--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -70,6 +70,8 @@
 @include multi-col-spacing('blog-post-col', $mb-size: 4, $mb-md-size: 5);
 
 .blog-post-footer {
+  line-height: 1;
+  padding-bottom: 1.25rem;
   padding-top: 0;
 }
 
