--- a/_sass/pages/_projects.scss
+++ b/_sass/pages/_projects.scss
@@ -24,6 +24,12 @@
 @include semantic-card('project');
 @include multi-col-spacing('project-col', $mb-size: 4, $mb-md-size: 5);
 
+.project-footer {
+  line-height: 1;
+  padding-bottom: 1.25rem;
+  padding-top: 0;
+}
+
 .employee-footer {
   display: flex;
   justify-content: center;
