--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -23,7 +23,7 @@ preload: hero-toolkits.svg
         </nav>
       </div>
     </div>
-    <section class="col-12 col-md-9 page--toolkit text prose order-1 order-md-2">
+    <section class="col-12 col-md-9 page--toolkit text prose order-1 order-md-2 {{page.toolkit_name}}">
       {{ content }}
     </section>
   </div>
