Fix table page selector

--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -28,7 +28,7 @@
   }
 }
 
-.page-creating-a-productive-and-collaborative-work-environment {
+[class^="page-creating-a-productive-and-collaborative-work-environment"] {
   table tbody td:last-child {
     text-align: center;
     vertical-align: middle;
