--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -13,14 +13,15 @@
   }
 
   h3 {
-    font-size: $font-size-small;
+    font-size: $font-size-base;
     letter-spacing: 0.05em;
     line-height: 1.375;
     text-transform: uppercase;
   }
 
   h4 {
-    font-size: $font-size-h5;
+    color: $gray-light;
+    font-size: $font-size-base;
   }
 
   p, li, h1, h2, h3, h4, h5, h6, .callout, .callout--alt, .post-blockquote {
@@ -29,14 +30,17 @@
 }
 
 [class^="page-creating-a-productive-and-collaborative-work-environment"] {
-  table tbody td:last-child {
-    text-align: center;
-    vertical-align: middle;
+  table tbody td {
+    width: calc(100% / 3);
+
+    &:last-child {
+      text-align: center;
+      vertical-align: middle;
+    }
   }
 }
 
 @mixin callout {
-  // max-width: calc(68ex + 3rem);
   padding: 1.5rem;
 
   > *:last-child {
