--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -30,12 +30,17 @@
 }
 
 [class^="page-creating-a-productive-and-collaborative-work-environment"] {
-  table tbody td {
-    width: calc(100% / 3);
+  table tbody {
+    td {
+      &:first-child {
+        width: 25%;
+      }
 
-    &:last-child {
-      text-align: center;
-      vertical-align: middle;
+      &:last-child {
+        text-align: center;
+        width: 25%;
+        vertical-align: middle;
+      }
     }
   }
 }
