--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -2,3 +2,10 @@
   max-width: 75%;
   height: auto;
 }
+
+.approach-item {
+  .employee-gradient::after {
+    height: 2rem;
+    width: 2rem;
+  }
+}
