--- a/_sass/pages/_filter.scss
+++ b/_sass/pages/_filter.scss
@@ -23,6 +23,26 @@
   @extend %justify-content-start;
   @extend %pb-4;
   border-bottom: 1px solid $gray-lightest;
+
+  .employee-gradient {
+    width: 3rem;
+
+    &::after {
+      height: 3rem;
+      width: 3rem;
+    }
+  }
+
+  @include media-breakpoint-up(md) {
+    .employee-gradient {
+      width: 4rem;
+
+      &::after {
+        height: 4rem;
+        width: 4rem;
+      }
+    }
+  }
 }
 
 .filter-image {
@@ -30,6 +50,12 @@
   box-shadow: 0 0 0 2px $white, 0 0 0 3px $gray-lightest;
   height: 3rem;
   margin-left: 3px;
+
+  @include media-breakpoint-up(md) {
+    box-shadow: 0 0 0 6px $white, 0 0 0 7px $gray-lightest;
+    height: 4rem;
+    margin-left: 7px;
+  }
 }
 
 .filter-title-wrapper.filter-employee {
@@ -56,12 +82,6 @@
 }
 
 @include media-breakpoint-up(md) {
-  .filter-image {
-    box-shadow: 0 0 0 6px $white, 0 0 0 7px $gray-lightest;
-    height: 4rem;
-    margin-left: 7px;
-  }
-
   .filter-title-wrapper.filter-employee {
     @include ml-3;
   }
