--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -179,13 +179,17 @@ h1 {
   margin-top: 1.5em;
 }
 
-.prose,
-.accordion-card-body {
+@mixin list {
   @extend %left-justified-list;
 
   li {
     padding-bottom: 0.25rem;
   }
+}
+
+.prose,
+.accordion-card-body {
+  @include list;
 
   h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0.5em;
