--- a/_sass/pages/_accessibility_toolkit.scss
+++ b/_sass/pages/_accessibility_toolkit.scss
@@ -17,7 +17,7 @@
     }
   }
 
-  fieldset {
+  /*fieldset {
     border: 1px solid #393939;
     border-radius: 0.6rem;
     padding: 1.2rem;
@@ -29,7 +29,7 @@
     font-weight: 700;
     border: 0;
     padding: 0;
-  }
+  }*/
   .form-check-label {
     padding-left: 0.5rem;
     margin-bottom: 0; // Override default `<label>` bottom margin
