Fix headings page

--- a/_sass/pages/_accessibility_toolkit.scss
+++ b/_sass/pages/_accessibility_toolkit.scss
@@ -62,4 +62,22 @@
     margin-bottom: 0.5em;
   }
 
+  .e-h2 {
+    font-size: 1.225rem;
+  }
+
+  .e-h3 {
+    font-size: 1.125rem;
+    text-transform: capitalize;
+  }
+
+  .e-h4 {
+    font-size: 1.025rem;
+
+  }
+
+  .e-h5 {
+    font-size: 0.925rem;
+  }
+
 }
