Updat form formating

--- a/_sass/pages/_accessibility_toolkit.scss
+++ b/_sass/pages/_accessibility_toolkit.scss
@@ -15,6 +15,11 @@
     + p {
       margin-bottom: 2em;
     }
+    .form-group {
+      label {
+        font-weight: bold;
+      }
+    }
   }
 
   /*fieldset {
