--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -31,3 +31,11 @@ form {
     }
   }
 }
+
+.form-control {
+  border-color: $gray-lighter;
+
+  &:focus {
+    box-shadow: 0 0 0 0.25rem $sk-blue-light;
+  }
+}
