--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -63,4 +63,8 @@
   @include callout;
   background-color: $brand-primary-lightest;
   margin-bottom: 1em;
+
+  h4 {
+    color: $body-color;
+  }
 }
