Update fade-in experience

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -78,8 +78,8 @@
 .hero-banner {
   background-position: top center;
   background-size: auto;
-  -webkit-animation: myfirst 1s ; /* Chrome, Safari, Opera */
-  animation: herofadein 1s ;
+  -webkit-animation: herofadein 1s;
+  animation: herofadein 1s;
 
   .hero-container {
     max-width: 506px;
