--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -1,16 +1,15 @@
 <div class="
   {% if include.color %}
     bg-{{ include.color }}
-  {% endif %}
-">
-<header class="hero hero-banner mb-5"
+  {% endif %}"
   {% if include.image %}
     style="
       background-image: url(/img/{{ include.image }});
       background-repeat: no-repeat;
       background-size: cover;"
-    {% endif %}
-  >
+  {% endif %}
+>
+<header class="hero hero-banner mb-5">
   <div class="hero-container container-fluid text-center page--join__text">
     <{% if page.layout == "toolkit" %}p{% else %}h1{% endif %} class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
       {% if include.hero_title %}
