Fix alignment of hero

--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -1,7 +1,7 @@
 <div class="
   {% if include.color %}
     bg-{{ include.color }}
-  {% endif %}"
+  {% endif %} hero-banner"
   {% if include.image %}
     style="
       background-image: url(/img/{{ include.image }});
