Make sure links show up on open positions

--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -21,23 +21,25 @@
     {% endfor %}
   </div>
 
-  <p>
-    Don't see your role? Don't worry, we could be hiring sooner than you think, so we'd
-    still love to talk. We typically hire people with skills in research, design, product
-    management, engineering, data science, security, procurement, digital transformation,
-    and client engagement management.
-    Please don't hesitate to <a href="mailto:hello@skylight.digital">reach out to us</a>.
-  </p>
+  <div class="text">
+    <p>
+      Don't see your role? Don't worry, we could be hiring sooner than you think, so we'd
+      still love to talk. We typically hire people with skills in research, design, product
+      management, engineering, data science, security, procurement, digital transformation,
+      and client engagement management.
+      Please don't hesitate to <a href="mailto:hello@skylight.digital">reach out to us</a>.
+    </p>
 
-  <p>
-    For most roles, we also offer paid apprenticeship opportunities for post-graduate
-    professionals and paid internship opportunities for current or recent college graduates.
-    If you're interested in an apprenticeship or internship,
-    please <a href="mailto:hello@skylight.digital">get in touch</a>.
-  </p>
-{% else %}
-  <p>
-    We're not currently hiring at the moment, but that can change quickly.
-    So please don't hesitate to <a href="mailto:hello@skylight.digital">>get in touch</a>!
-  </p>
-{% endif %}
+    <p>
+      For most roles, we also offer paid apprenticeship opportunities for post-graduate
+      professionals and paid internship opportunities for current or recent college graduates.
+      If you're interested in an apprenticeship or internship,
+      please <a href="mailto:hello@skylight.digital">get in touch</a>.
+    </p>
+  {% else %}
+    <p>
+      We're not currently hiring at the moment, but that can change quickly.
+      So please don't hesitate to <a href="mailto:hello@skylight.digital">>get in touch</a>!
+    </p>
+  {% endif %}
+</div>
