Enforce accordion lists on only ditap page and not global accordions

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -13,6 +13,10 @@
     padding-bottom: 56px;
     padding-top: 56px;
   }
+
+  .accordion-card-body {
+    @include list;
+  }
 }
 
 .page-ditap-content {
