--- a/_includes/filter_component.html
+++ b/_includes/filter_component.html
@@ -1,4 +1,3 @@
-
 {% capture accordion_body %}
 <div class="">
   <div class="row">
@@ -7,7 +6,11 @@
       <h3 class="margin-heading mt-sm-0">Type of service</h3>
       <ul class="mb-0 list-unstyled">
         {% for item in filter.type_of_service %}
-          <li><a class="exp-filter-item" href="#0">{{ item }}</a></li>
+        <li>
+          <a class="exp-filter-item" href="#" onclick="return false;"
+            >{{ item }}</a
+          >
+        </li>
         {% endfor %}
       </ul>
     </div>
@@ -16,7 +19,11 @@
       <h3 class="margin-heading mt-sm-0">Capabilities</h3>
       <ul class="mb-0 list-unstyled">
         {% for item in filter.capabilities %}
-          <li><a class="exp-filter-item" href="#0">{{ item }}</a></li>
+        <li>
+          <a class="exp-filter-item" href="#" onclick="return false;"
+            >{{ item }}</a
+          >
+        </li>
         {% endfor %}
       </ul>
     </div>
@@ -25,7 +32,11 @@
       <h3 class="margin-heading mt-sm-0">Mission areas</h3>
       <ul class="mb-0 list-unstyled">
         {% for item in filter.mission_areas %}
-          <li><a class="exp-filter-item" href="#0">{{ item }}</a></li>
+        <li>
+          <a class="exp-filter-item" href="#" onclick="return false;"
+            >{{ item }}</a
+          >
+        </li>
         {% endfor %}
       </ul>
     </div>
@@ -38,10 +49,20 @@
 
   <!-- Accordion card -->
   <div class="card accordion-card accordion-filter">
-
     <!-- Card header -->
-    <div class="accordion-header" role="tab" id="accordionHeading-{{include.accordion_index}}">
-      <a class="bg-gray-light collapsed" data-toggle="collapse" href="#accordionCollapse-{{include.accordion_index}}" aria-expanded="false" aria-controls="accordionCollapse-{{include.accordion_index}}" class="collapsed">
+    <div
+      class="accordion-header"
+      role="tab"
+      id="accordionHeading-{{include.accordion_index}}"
+    >
+      <a
+        class="bg-gray-light collapsed"
+        data-toggle="collapse"
+        href="#accordionCollapse-{{include.accordion_index}}"
+        aria-expanded="false"
+        aria-controls="accordionCollapse-{{include.accordion_index}}"
+        class="collapsed"
+      >
         <div>
           <h3 class="mb-0">
             <div class="text-ink">
@@ -54,12 +75,16 @@
     </div>
 
     <!-- Card body -->
-    <div id="accordionCollapse-{{include.accordion_index}}" class="collapse" role="tabpanel" aria-labelledby="accordionHeading-{{include.accordion_index}}">
+    <div
+      id="accordionCollapse-{{include.accordion_index}}"
+      class="collapse"
+      role="tabpanel"
+      aria-labelledby="accordionHeading-{{include.accordion_index}}"
+    >
       <div class="card-body accordion-card-body">
         {{ accordion_body }}
       </div>
     </div>
-
   </div>
-<!-- Accordion card -->
+  <!-- Accordion card -->
 </div>
