--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,8 @@
   {% assign site_name = 'Skylight' %}
   {% assign site_title = site.title | xml_escape %}
   {% assign site_description = site.description | xml_escape %}
-  {% assign site_image = site_url | append: '/img/twitter-card.png' %}
-  {% assign site_image_description = 'Skylight Avatar' %}
+  {% assign site_image = site_url | append: '/img/logo-social.png' %}
+  {% assign site_image_description = 'Skylight Logo' %}
   {% assign site_keywords = site.keywords %}
   {% assign site_published = site.published %}
   {% assign site_modified = site.modified %}
