Add parent role on accordion

--- a/_includes/accordion.html
+++ b/_includes/accordion.html
@@ -1,5 +1,5 @@
 <!-- Accordion card -->
-<div class="card accordion-card">
+<div class="card accordion-card" role="tablist">
 
   <!-- Card header -->
   <div class="accordion-header" role="tab" id="accordionHeading-{{include.accordion_index}}">
