Add tablist to accordian parent div

--- a/_includes/filter_component.html
+++ b/_includes/filter_component.html
@@ -48,7 +48,7 @@
   <div class="post-tags filter-post-tags"></div>
 
   <!-- Accordion card -->
-  <div class="card accordion-card accordion-filter">
+  <div class="card accordion-card accordion-filter" role="tablist">
     <!-- Card header -->
     <div
       class="accordion-header"
