--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -54,13 +54,19 @@
     }
   }
 
-  a {
-    font-weight: bold;
-    font-size: $font-size-large;
-  }
-
   li {
     border: 2px solid $gray-lightest;
+  }
+}
+
+.open-positions-title {
+  font-weight: bold;
+  font-size: $font-size-large;
+}
+
+.open-positions-summary {
+  a {
+    text-decoration: underline;
   }
 }
 
