Fix heading levels across site

--- a/_includes/filter_component.html
+++ b/_includes/filter_component.html
@@ -64,12 +64,12 @@
         class="collapsed"
       >
         <div>
-          <h3 class="mb-0">
+          <h2 class="mb-0 header-display-4">
             <div class="text-ink">
               Filters
             </div>
             <div class="plus-minus-toggle"></div>
-          </h3>
+          </h2>
         </div>
       </a>
     </div>
