--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,11 @@
 <header class="header" role="banner">
   <nav class="navbar">
     <div class="navbar-flex-container">
-      <h1><a class="navbar-logo" href="/">Skylight</a></h1>
-
+      {% if page.title == "Home" %}
+        <h1><a class="navbar-logo" href="/">Skylight</a></h1>
+      {% else %}
+        <a class="navbar-logo" href="/">Skylight</a>
+      {% endif %}
       <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#navbar-nav-collapsible" aria-controls="navbar-nav-collapsible" aria-expanded="false">
         <div class="burger"><span></span></div>
         <span class="sr-only">Toggle Navigation</span>
