update company details

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -134,7 +134,7 @@
     { "@context": "http://schema.org",
      "@type": "Organization",
      "name": "{{site_name}}",
-     "legalName": "Skylight Digital LLC",
+     "legalName": "Skylight Inc.",
      "url": "{{site_url}}",
      "logo": {
        "@type": "ImageObject",
@@ -148,9 +148,9 @@
       ],
      "address": {
        "@type": "PostalAddress",
-       "addressLocality": "Chapel Hill",
-       "addressRegion": "NC",
-       "postalCode": "27516",
+       "addressLocality": "Sarasota",
+       "addressRegion": "FL",
+       "postalCode": "34236",
        "addressCountry": "USA"
      },
      "contactPoint": {
