Add h4 style heading to blog post

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -21,7 +21,7 @@
         {% endif %}
       </header>
 
-      <div class="post-content">
+      <div class="post-content prose">
         {{content}}
       </div>
 
