Strip html from page excerpt

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,9 +37,8 @@
   {% else %}
     {% assign title = site_title %}
   {% endif %}
-
   {% if page.excerpt %}
-    {% assign description = page.excerpt | xml_escape %}
+    {% assign description = page.excerpt | strip_html | xml_escape %}
   {% elsif page.description %}
     {% assign description = page.description | xml_escape %}
   {% else %}
