--- a/_sass/pages/_accessibility_toolkit.scss
+++ b/_sass/pages/_accessibility_toolkit.scss
@@ -44,7 +44,7 @@
   .passes:after {
     display: inline-block;
     content: '  ';
-    background-image: url('/img/check-circle-solid.svg');
+    background-image: url('/img/accessibility/check-circle-solid.svg');
     color: $brand-success;
     background-size: 14px 14px;
     height: 14px;
@@ -55,7 +55,7 @@
   .fails:after {
     display: inline-block;
     content: '  ';
-    background-image: url('/img/times-circle-solid.svg');
+    background-image: url('/img/accessibility/times-circle-solid.svg');
     background-size: 14px 14px;
     color: $sk-red;
     height: 14px;
